# auctions-clean-py

./: .gitignore  Makefile
auctions_platform/: Makefile
auctions_platform/auctions/: README.md  setup.cfg
auctions_platform/auctions/tests/application/use_cases/: test_placing_bid.py
auctions_platform/foundation/: README.md  setup.cfg
auctions_platform/foundation/foundation/value_objects/: __init__.py  money.py
auctions_platform/foundation/foundation/value_objects/factories/: __init__.py
